--- a/home/index.html
+++ b/home/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Sample Title</title>
-    <link href="my-style.css" rel="stylesheet" type="text/css"/>
+	<meta charset="UTF-8">
+	<title>Sample Title</title>
+	<link href="my-style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 <div class="container">
-    <div class="header">Header</div>
-
-    <div class="quotes center-children">
-        <div class="jumbotron">
-            Jumbotron
-            Jumbotron
-            Jumbotron
-        </div>
-    </div>
-    <div class="user-detail center-children">
-        <div class="user">
-            Name etc
-            Name etc
-        </div>
-    </div>
+	<div class="header">
+		<div>
+			<div>Home</div>
+			<div>Second</div>
+			<div>Third</div>
+			<div>Forth</div>
+			<div>Search Big Big</div>
+		</div>
+	</div>
+	<div class="content">
+		<div class="quotes center-children">
+			<div class="jumbotron">
+				Jumbotron
+				Jumbotron
+				Jumbotron
+			</div>
+		</div>
+		<div class="user-detail center-children">
+			<div class="user">
+				Name etc
+				Name etc
+			</div>
+		</div>
+	</div>
 </div>
 </body>
 </html>
