--- a/second/index.html
+++ b/second/index.html
@@ -9,11 +9,10 @@
 <div class="container">
     <div class="header">
         <div>
+            <div class="brand">Aatish Rana</div>
             <div>Home</div>
-            <div>Second</div>
-            <div>Third</div>
-            <div>Forth</div>
-            <div>Search Big Big</div>
+            <div>Posts</div>
+            <div>Projects</div>
         </div>
     </div>
     <div class="content">
