--- a/second.html
+++ b/second.html
@@ -17,7 +17,7 @@
     </div>
     <div class="second-content">
         <div class="second-content-item">
-            <h2>first content</h2>
+            <h2><a href="second-detail.html">First content</a></h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
@@ -26,7 +26,7 @@
                 software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
         <div class="second-content-item">
-            <h2>first content</h2>
+            <h2><a href="second-detail.html">First content</a></h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
@@ -35,7 +35,7 @@
                 software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
         <div class="second-content-item">
-            <h2>first content</h2>
+            <h2><a href="second-detail.html">First content</a></h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
@@ -44,7 +44,7 @@
                 software like Aldus PageMaker including versions of Lorem Ipsum.</p>
         </div>
         <div class="second-content-item">
-            <h2>first content</h2>
+            <h2><a href="second-detail.html">First content</a></h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                 industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
