--- a/second-detail.html
+++ b/second-detail.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sample Page</title>
     <link href="my-style.css" type="text/css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 <div class="second-detail-container">
