--- a/second.html
+++ b/second.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sample Page</title>
     <link href="my-style.css" type="text/css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 <div class="second-container">
@@ -11,7 +12,7 @@
         <div>
             <div class="brand"><a href="home.html">Home</a></div>
             <div><a href="second.html">Second</a></div>
-            <div><a href="#">Third</a></div>
+            <div><a href="third.html">Third</a></div>
             <div><a href="#">Forth</a></div>
         </div>
     </div>
